--- a/frontend/package.json
+++ b/frontend/package.json
@@ -79,6 +79,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.1.10",
+    "baseline-browser-mapping": "^2.9.18",
     "typescript": "~5.9.2"
   },
   "private": true
