--- a/backend/package.json
+++ b/backend/package.json
@@ -25,12 +25,14 @@
   ],
   "author": "Taatom",
   "license": "MIT",
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.947.0",
     "@aws-sdk/s3-request-presigner": "^3.947.0",
     "@react-native-firebase/app": "^23.7.0",
     "@react-native-firebase/messaging": "^23.7.0",
-    "@sendinblue/client": "^3.3.1",
     "@sentry/node": "^10.29.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.7.0",
@@ -62,5 +64,9 @@
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "supertest": "^6.3.4"
+  },
+  "overrides": {
+    "fast-xml-parser": "^5.3.4",
+    "lodash": "^4.17.23"
   }
 }
