--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,33 +24,33 @@
     "@react-navigation/stack": "^7.4.5",
     "@react-three/fiber": "^9.3.0",
     "@sentry/react-native": "~7.2.0",
-    "@shopify/flash-list": "^2.2.0",
+    "@shopify/flash-list": "2.0.2",
     "@tanstack/react-query": "^5.90.16",
     "@tanstack/react-query-devtools": "^5.91.2",
     "axios": "^1.13.2",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "expo": "~54.0.30",
+    "expo": "~54.0.33",
     "expo-auth-session": "~7.0.10",
     "expo-av": "~16.0.8",
     "expo-camera": "~17.0.10",
-    "expo-constants": "~18.0.12",
+    "expo-constants": "~18.0.13",
     "expo-crypto": "~15.0.8",
     "expo-dev-client": "~6.0.20",
     "expo-file-system": "~19.0.21",
-    "expo-font": "~14.0.10",
+    "expo-font": "~14.0.11",
     "expo-image-manipulator": "~14.0.8",
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
     "expo-location": "~19.0.8",
     "expo-media-library": "~18.2.1",
-    "expo-notifications": "~0.32.15",
-    "expo-router": "~6.0.21",
+    "expo-notifications": "~0.32.16",
+    "expo-router": "~6.0.23",
     "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-tracking-transparency": "^6.0.8",
-    "expo-updates": "~29.0.15",
+    "expo-updates": "~29.0.16",
     "expo-video-thumbnails": "~10.0.8",
     "expo-web-browser": "^15.0.10",
     "formik": "^2.4.6",
