--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "upload-sourcemaps": "node scripts/upload-sourcemaps.js"
   },
   "dependencies": {
+    "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
