--- a/.github/workflows/frontend-build.yml
+++ b/.github/workflows/frontend-build.yml
@@ -1,23 +1,16 @@
 name: Frontend Build Pipeline
 
 # Build Pipeline Flow:
-# GitHub Actions:
-#   ├─ Validate code (linting, tests)
-#   ├─ Build web version
-#   ├─ Upload Sentry source maps
-#   ├─ Trigger EAS build (iOS/Android)
-#   └─ Enforce quality gates
+#   1. validate     → Commit message & branch conventions (TAATOM prefix, branch regex)
+#   2. build-and-test → Lint, build web, Sentry source maps, upload artifacts
+#   3. build-mobile → EAS iOS/Android (main or manual only)
 #
-# EAS Build (triggered by GitHub Actions):
-#   ├─ Android build
-#   ├─ iOS build
-#   ├─ Code signing
-#   └─ Store artifacts
+# Commit message rule: First line must match ^TAATOM(-[0-9]+)?(\s|:)
+#   Examples: "TAATOM: Add login", "TAATOM-42: Fix crash", "TAATOM-123 Add feature"
+#   Bypass: Include [skip validation] in the message to skip (use sparingly).
 #
-# Note: Warnings about "Context access might be invalid" are expected.
-# These warnings appear because GitHub Actions doesn't know if the secrets exist.
-# The workflow will work correctly when secrets are added to GitHub Secrets.
-# Add these secrets in: Repository Settings → Secrets and variables → Actions
+# Note: "Context access might be invalid" warnings are expected until secrets exist.
+# Add secrets in: Repository Settings → Secrets and variables → Actions
 
 on:
   push:
@@ -38,10 +31,89 @@ env:
   NODE_VERSION: '20.x'
 
 jobs:
+  validate:
+    name: Validate Conventions
+    runs-on: ubuntu-latest
+    outputs:
+      commit_sha: ${{ steps.meta.outputs.commit_sha }}
+      branch: ${{ steps.meta.outputs.branch }}
+      message_ok: ${{ steps.conventions.outputs.message_ok }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+
+      - name: Set ref meta
+        id: meta
+        run: |
+          echo "commit_sha=${{ github.sha }}" >> "$GITHUB_OUTPUT"
+          echo "branch=${GITHUB_REF#refs/heads/}" >> "$GITHUB_OUTPUT"
+
+      - name: Enforce commit message & branch conventions
+        id: conventions
+        run: |
+          BRANCH="${GITHUB_REF#refs/heads/}"
+          if [ "${{ github.event_name }}" = "pull_request" ]; then
+            MSG="${{ github.event.pull_request.title }}"
+          elif [ "${{ github.event_name }}" = "push" ] && [ -n "${{ github.event.head_commit.message }}" ]; then
+            MSG="${{ github.event.head_commit.message }}"
+            MSG=$(printf '%s\n' "$MSG" | head -n1)
+          else
+            MSG=$(git log -1 --pretty=%s 2>/dev/null || echo "TAATOM: workflow run")
+          fi
+
+          # Allow bypass
+          if echo "$MSG" | grep -qi '\[skip validation\]'; then
+            echo "message_ok=true" >> "$GITHUB_OUTPUT"
+            echo "✅ Commit message validation skipped (bypass marker found)."
+            exit 0
+          fi
+
+          # workflow_dispatch: skip strict convention so manual runs always pass
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            echo "message_ok=true" >> "$GITHUB_OUTPUT"
+            echo "✅ Manual run: convention check skipped."
+            exit 0
+          fi
+
+          # Require first line to start with TAATOM (optional ticket: TAATOM-123) then space or colon
+          # Regex: ^TAATOM(-[0-9]+)?(\s|:)
+          if echo "$MSG" | grep -qE '^TAATOM(-[0-9]+)?(\s|:)'; then
+            echo "message_ok=true" >> "$GITHUB_OUTPUT"
+            echo "✅ Commit message matches convention: TAATOM or TAATOM-<id> prefix."
+          else
+            echo "message_ok=false" >> "$GITHUB_OUTPUT"
+            echo "❌ Commit message must start with TAATOM or TAATOM-<number> followed by space or colon."
+            echo "   Example: TAATOM: Add feature"
+            echo "   Example: TAATOM-42: Fix bug"
+            echo "   Got (first line): $MSG"
+            exit 1
+          fi
+
+          # Optional: branch name pattern (main, develop, or feature/TAATOM-*, hotfix/*, release/*)
+          if echo "$BRANCH" | grep -qE '^(main|develop|feature/|hotfix/|release/|bugfix/)'; then
+            echo "✅ Branch name allowed: $BRANCH"
+          else
+            echo "⚠️  Branch '$BRANCH' does not match common pattern (main|develop|feature/|hotfix/|release/|bugfix/). Continuing anyway."
+          fi
+
+      - name: Summary
+        run: |
+          echo "=============================================="
+          echo "  Validation summary"
+          echo "=============================================="
+          echo "  Commit: ${{ github.sha }}"
+          echo "  Branch: ${GITHUB_REF#refs/heads/}"
+          echo "  Event:  ${{ github.event_name }}"
+          echo "  Message OK: ${{ steps.conventions.outputs.message_ok }}"
+          echo "=============================================="
+
   build-and-test:
     name: Build & Test Frontend
     runs-on: ubuntu-latest
-    
+    needs: validate
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -114,6 +186,17 @@ jobs:
           name: web-build
           path: frontend/dist
           retention-days: 7
+
+      - name: Pipeline summary
+        run: |
+          echo "=============================================="
+          echo "  Frontend Build & Test — Complete"
+          echo "=============================================="
+          echo "  Commit: ${{ github.sha }}"
+          echo "  Branch: ${GITHUB_REF#refs/heads/}"
+          echo "  Conventions: passed (validate job)"
+          echo "  Lint: ran | Build: web built"
+          echo "=============================================="
 
   build-mobile:
     name: Build Mobile Apps (EAS)
